# sfml-platformer

./: BouncyParticle.cpp  ClientInstance.h  Elevator.cpp  Elevator.h  Logger.cpp  Packet.cpp  Packet.h  Particle.h  Platformer.cbp  Platformer.depend  Platformer.layout  Platformer_Client.cbp  Platformer_Client.depend  Platformer_Client.layout  Platformer_Server.cbp  Platformer_Server.cscope_file_list  Platformer_Server.depend  Platformer_Server.layout  README  README.md  Resource.h  compile_linux.sh  compile_linux_client.sh  main.cpp  main_client.cpp  main_server.cpp
Platformer Server/: Platformer_Server.1  main.cpp
Platformer copy.app/Contents/: Info.plist
Platformer.app/Contents/: Info.plist
Platformer.xcodeproj/: project.pbxproj
Platformer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Platformer_Client.app/Contents/: Info.plist
Platformer_Server.app/Contents/: Info.plist
Platformer_Server.app/Contents/Resources/: CMakeLists.txt
include/: Animation.h  BouncyParticle.h  Character.h  CharacterSkin.h  ClientInstance.h  Entity.h  Game.h  IRenderable.h  Logger.h  Packet.h  PhysicsEntity.h  Platform.h  Resource.h  Server.h  Tileset.h  World.h
include/cfgparser/: cfgparser.h  configwrapper.h
include/cpGUI/: cpButton.h  cpCheckBox.h  cpGUI.h  cpGUI_base.h  cpGuiContainer.h  cpImageButton.h  cpObject.h  cpScrollBar.h  cpSelection-DropDownBox.h  (+3 more)
src/: Animation.cpp  Character.cpp  CharacterSkin.cpp  ClientInstance.cpp  Entity.cpp  Game.cpp  Logger.cpp  Packet.cpp  Particle.cpp  PhysicsEntity.cpp  Platform.cpp  Resource.cpp  Server.cpp  World.cpp
(+20 files in other folders)
